app_conf_with_nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-app-deployment
  labels:
    app: covid-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covid-app
  template:
    metadata:
      labels:
        app: covid-app
    spec:
      volumes:
        - name: nginx-covid-app-conf
          configMap:
            name: nginx-covid-app-conf
            items:
            - key: "nginx-conf"
              path: "nginx.conf"
        - name: socks-volume
          emptyDir: {}
        - name: log
          emptyDir: {}
        - name: staticfiles-volume
          emptyDir: {}

      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: nginx-covid-app-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
            readOnly: true
          - name: log
            mountPath: /var/log/nginx
          - name: staticfiles-volume
            mountPath: "/app/assets"

      - name: covid-app
        image: us-docker.pkg.dev/eminent-citadel-160917/gcr.io/covid-app:0.1
        command: ["/bin/bash"]
        args:
          - -c
          - >-
              cd /app &&
              poetry run gunicorn index:server --workers 3 --log-file - -b unix:/socks_volume/gunicorn.sock
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: staticfiles-volume
            mountPath: "/app/assets"
---
apiVersion: v1
kind: Service
metadata:
  name: covid-app-service
spec:
  type: ClusterIP
  selector:
    app: covid-app
  ports:
  - name: covid-app-nginx
    protocol: TCP
    port: 80
