django_conf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-app-deployment
  labels:
    app: covid-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: covid-app
  template:
    metadata:
      labels:
        app: covid-app
    spec:
      containers:
      - name: covid-app
        image: us-docker.pkg.dev/eminent-citadel-160917/gcr.io/covid-app:0.1
        ports:
        - containerPort: 80
        command: ["/bin/bash"]
        args:
          - -c
          - >-
              cd /app &&
              poetry run gunicorn index:server -b :80 --workers 1
---
apiVersion: v1
kind: Service
metadata:
  name: covid-app-service
spec:
  type: LoadBalancer
  selector:
    app: covid-app
  ports:
  - name: covid-app-nginx
    protocol: TCP
    port: 80
