deploy_on_kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-app-deployment
  labels:
    app: covid-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: covid-app
  template:
    metadata:
      labels:
        app: covid-app
    spec:
      imagePullSecrets:
      - name: regcred
      volumes:
        - name: nginx-covid-app-conf
          configMap:
            name: nginx-covid-app-conf
            items:
            - key: "nginx-conf"
              path: "nginx.conf"
        - name: socks-volume
          emptyDir: {}
        - name: log
          emptyDir: {}
        - name: staticfiles-volume
          emptyDir: {}

      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: nginx-covid-app-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: nginx.conf
            readOnly: true
          - name: log
            mountPath: /var/log/nginx
          - name: staticfiles-volume
            mountPath: "/app/assets"

      - name: covid-app
        image: marcoinacio/covid-app:0.1
        command: ["/bin/bash"]
        args:
          - -c
          - >-
              cd /app &&
              poetry run gunicorn index:server --workers 5 --log-file - -b unix:/socks_volume/gunicorn.sock
        volumeMounts:
          - name: socks-volume
            mountPath: "/socks_volume"
          - name: staticfiles-volume
            mountPath: "/app/assets"
---
apiVersion: v1
kind: Service
metadata:
  name: covid-app-service
spec:
  type: ClusterIP
  selector:
    app: covid-app
  ports:
  - name: covid-app-nginx
    protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  #ingressClassName: nginx
  tls:
  - hosts:
    - covid.marcoinacio.com
    secretName: covid-app-tls
  rules:
    - host: covid.marcoinacio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: covid-app-service
                port:
                  number: 80
