ingress_conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - covid.marcoinacio.com
    secretName: covid-app-tls
  rules:
    - host: covid.marcoinacio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: covid-app-service
                port:
                  number: 80
